Address sonar major code smells (#5149)
Address major code smells reported by sonar

Signed-off-by: Jesse Nelson <jesse@swirldslabs.com>